--- a/vuetify/package.json
+++ b/vuetify/package.json
@@ -8,9 +8,14 @@
   },
   "dependencies": {
     "@mdi/font": "^3.6.95",
+    "chart.js": "^2.9.3",
+    "chartkick": "^3.2.0",
     "core-js": "^3.6.4",
+    "hchs-vue-charts": "^1.2.8",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
+    "vue-chartkick": "^0.6.0",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3"
