--- a/vuetify/package.json
+++ b/vuetify/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/font": "^3.6.95",
     "chart.js": "^2.9.3",
+    "chartjs": "^0.3.24",
     "chartkick": "^3.2.0",
     "core-js": "^3.6.4",
     "hchs-vue-charts": "^1.2.8",
